@@ -1,8 +1,9 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
 from trytond.pyson import PYSON, PYSONEncoder
+from trytond.tools import cached_property
 
-from .field import Field
+from .field import Field, get_eval_fields
 
 
 def digits_validate(value):
@@ -16,6 +17,13 @@ def digits_validate(value):
                 if isinstance(i, PYSON):
                     assert i.types() == {int}, \
                         'PYSON digits must return an integer'
+
+
+def _get_digits_depends(field):
+    if isinstance(field.digits, str):
+        return {field.digits}
+    else:
+        return get_eval_fields(field.digits)
 
 
 class Float(Field):
@@ -63,3 +71,15 @@ class Float(Field):
         definition = super().definition(model, language)
         definition['digits'] = encoder.encode(self.digits)
         return definition
+
+    @cached_property
+    def display_depends(self):
+        return super().display_depends | _get_digits_depends(self)
+
+    @cached_property
+    def edition_depends(self):
+        return super().edition_depends | _get_digits_depends(self)
+
+    @cached_property
+    def validation_depends(self):
+        return super().validation_depends | _get_digits_depends(self)
