@@ -87,4 +87,28 @@
             ]]>
         </field>
     </record>
+
+    <record model="ir.ui.view" id="test_modelview_states_depends_tree">
+        <field name="model">test.modelview.states_depends</field>
+        <field name="type">tree</field>
+        <field name="arch" type="xml">
+            <![CDATA[
+            <tree>
+                <field name="foo"/>
+            </tree>
+            ]]>
+        </field>
+    </record>
+    <record model="ir.ui.view" id="test_modelview_states_depends_form">
+        <field name="model">test.modelview.states_depends</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <![CDATA[
+            <form>
+                <label name="foo"/>
+                <field name="foo"/>
+            </form>
+            ]]>
+        </field>
+    </record>
 </tryton>
